package twisk.monde;

public class SasSortie extends Activite{

    /**
     * Extends de Activité, set le nom à sortie
     */
    public SasSortie(){
        super("SASSORTIE");
    }

    /**
     *
     * @return Renvoie un String vide
     */
    @Override
    public String toC() {
        return "";
    }
}
